<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
 	android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    
    <include layout="@layout/activity_title_norefresh"/>
    
	<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/about" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:paddingTop="20dip"
                android:text="@string/helpCopyright" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/helpContactTitle"
                android:textColor="@color/correctAnswerColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/helpContactQQ" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/helpContactMail" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/helpContactWeibo" />
        </LinearLayout>

    </ScrollView>  
</LinearLayout>