<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/logindialog_space"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
	<ScrollView 
	    android:id="@+id/login_scrollview"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:paddingTop="14dp"
	    android:paddingLeft="14dp"
	    android:paddingRight="14dp"
	    android:scrollbars="none"
	    >
	    <ViewSwitcher 
	        android:id="@+id/logindialog_view_switcher"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        
	        <RelativeLayout 
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:background="@drawable/login_bg"
	            android:paddingTop="30dp"
	            android:paddingBottom="20dp">
				<TableLayout 
				    android:id="@+id/login_user_table"
				    android:orientation="vertical"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginTop="10dp"
				    android:layout_marginLeft="15dp"
				    android:layout_marginRight="15dp"
				    android:layout_centerHorizontal="true"
				    android:background="@drawable/login_user_table_bg" >
				    <LinearLayout 
				        android:id="@+id/login_uly"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content">
				        <TextView 
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:layout_marginLeft="8dp"
				            android:layout_marginTop="10dp"
				            android:textSize="@dimen/text_size_16"
				            android:textStyle="bold"
				            android:textColor="#FF000000"
				            android:text="@string/login_dialog_account"  />
				        <AutoCompleteTextView 
				            android:id="@+id/login_account" 
				            android:layout_width="fill_parent"
				            android:layout_height="wrap_content"
				            android:layout_marginTop="10.0dip" 
							android:layout_marginLeft="8.0dip" 
	                        android:layout_marginRight="8.0dip" 
				            android:background="@null"
				            android:hint="@string/login_dialog_account_hint"
				            android:textSize="@dimen/text_size_16" 
	                        android:maxLines="1" 
	                        android:singleLine="true" 
	                        android:selectAllOnFocus="true" 
	                        android:inputType="textEmailAddress" />
				    </LinearLayout>
				    
				    <ImageView 
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:layout_marginTop="5dp"
				        android:layout_marginLeft="2dp"
				        android:layout_marginRight="2dp"
				        android:background="@drawable/login_line"
				        android:scaleType="fitXY"/>
				    
				    <LinearLayout 
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:layout_marginTop="7dp">
				        <TextView 
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:layout_marginLeft="8dp"
				            android:textSize="@dimen/text_size_16"
				            android:textStyle="bold"
				            android:textColor="#ff000000"
				            android:text="@string/login_dialog_password"/>
				        
				        <EditText 
				            android:id="@+id/login_password"
				            android:layout_width="fill_parent"
				            android:layout_height="wrap_content"
				            android:layout_marginLeft="8dp"
				            android:layout_marginRight="8dp"
				            android:textSize="@dimen/text_size_16"
				            android:background="@null"
				            android:hint="@string/login_dialog_password_hint"
				            android:maxLines="1"
				            android:password="true"
				            android:singleLine="true"
				            android:selectAllOnFocus="true"/>
				    </LinearLayout>
				</TableLayout>
				
				<TableLayout 
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:layout_below="@+id/login_user_table"
				    android:layout_alignLeft="@+id/login_user_table"
				    android:layout_alignRight="@+id/login_user_table"
				    android:stretchColumns="0,2" >
				    <TableRow 
				        android:gravity="center_horizontal"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_marginTop="5dp">
				        <CheckBox 
				            android:id="@+id/login_checkbox_rememberMe"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:layout_gravity="left|center"
				            android:button="@drawable/login_checkbox_selector"
				            android:paddingLeft="30dp"
				            android:textColor="@color/black"
				            android:textSize="@dimen/text_size_13"
				            android:text="@string/login_dialog_rememberMe"
				            android:checked="true"/>
				    </TableRow>
				    
				    <LinearLayout 
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:layout_marginTop="5dp">
				        <Button 
				            android:id="@+id/login_btn_login"
				            android:layout_width="fill_parent"
				            android:layout_height="45dp"
				            android:textSize="@dimen/text_size_20"
				            android:text="@string/login_dialog_login"
				            android:background="@drawable/login_btn_selector"/>
				    </LinearLayout>
				    
				    <LinearLayout 
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:layout_marginTop="5dp">
				        <Button 
				            android:id="@+id/login_btn_reg"
				            android:layout_width="fill_parent"
				            android:layout_height="45dp"
				            android:textSize="@dimen/text_size_20"
				            android:text="@string/login_dialog_reg"
				            android:background="@drawable/login_btn_reg_selector"/>
				    </LinearLayout>
				</TableLayout>
	        </RelativeLayout>
	        <RelativeLayout
	            android:id="@+id/progressBar"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:background="@drawable/loading_bg" >
                <ProgressBar
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
	            
	    </ViewSwitcher>
	</ScrollView>
	
	<ImageButton 
	    android:id="@+id/login_close_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignRight="@+id/login_scrollview"
	    android:layout_alignTop="@+id/login_scrollview"
	    android:background="@drawable/login_close_button"
	    />
</RelativeLayout>